se corrigieron errores

--- a/views/pages/newAlumno.ejs
+++ b/views/pages/newAlumno.ejs
@@ -1,5 +1,11 @@
 <br>
-<h1> Alumnos</h1>
+<h1>Nuevo Alumnos</h1>
+<form action="/addAlumno">
+  <label for="nombre">Nombre</label>
+  <input type="text" name="nombre">
+  <label for="nombre">Nombre</label> //terminar
+
+</form>
 <table id="alumno" class=" table striped" style= "width: 50%;margin: auto">
   <thead>
   <tr>
@@ -22,4 +28,3 @@
   <% } %>
   </tbody>
 </table>
-
